--- a/images/style.css
+++ b/images/style.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 /*targets the seo in our header to make it a different color */
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header section {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 /* removes the bullet points from our list */
-.header section ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header section ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -69,7 +69,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -87,26 +87,26 @@ p {
 }
 
 /* grouped our 3 divs to clean up our CSS */
-.benefit-lead, .benefit-brand h3, .benefit-cost h3 {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
 /* grouped our 3 header properties to clean up our CSS*/
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
 /* grouped our 3 img properties to clean up our CSS*/
-.benefit-lead img, .benefit-brand img, .benefit-cost img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+.content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -116,12 +116,12 @@ p {
 }
 
 
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
+.content img {
     max-height: 200px;
 }
 
 
-.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
